- fixed an overflow issue on the landing page - cleared up console logs

--- a/src/app/sections/ProjectsSection.module.css
+++ b/src/app/sections/ProjectsSection.module.css
@@ -7,6 +7,7 @@
     background-color: #404040;
     padding: 50px;
     padding-inline: 200px;
+    padding-bottom: 150px;
 }
 
 .titleRow {
